location added in search route

--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
-ADD MUSIC PLAYER
-ADD RANDOM SONG BY ARTIST
+ADD MUSIC PLAYER (YOUTUBE HIDDEN DIV)
+ADD LOCATION (TOP RIGHT CORNER OF THE SCREEN)
+ADD RANDOM SONG BY ARTIST 
