--- a/todo
+++ b/todo
@@ -1,3 +1,8 @@
-ADD MUSIC PLAYER (YOUTUBE HIDDEN DIV)
+SWITCH TO TYPESCRIPT
+REDUCE AUTH TOKEN GENERATION AND USE REFRESH TOKENS
+TRANSFER RANDOM STRING AND JSON PARSING TO BACKEND
+ADD MUSIC PLAYER (YOUTUBE HIDDEN DIV :) )
 ADD LOCATION (TOP RIGHT CORNER OF THE SCREEN)
+ADD EXPLICIT BUTTON
+ADD HISTORY OF SONGS GENERATED (QUEUE MECHANISM) 
 ADD RANDOM SONG BY ARTIST 
