video player added

--- a/todo
+++ b/todo
@@ -1,8 +1,8 @@
 SWITCH TO TYPESCRIPT
 REDUCE AUTH TOKEN GENERATION AND USE REFRESH TOKENS
-TRANSFER RANDOM STRING AND JSON PARSING TO BACKEND
+TRANSFER RANDOM STRING AND JSON PARSING TO BACKEND //done
 ADD MUSIC PLAYER (YOUTUBE HIDDEN DIV :) )
 ADD LOCATION (TOP RIGHT CORNER OF THE SCREEN)
 ADD EXPLICIT BUTTON
-ADD HISTORY OF SONGS GENERATED (QUEUE MECHANISM) 
+ADD HISTORY OF SONGS GENERATED (QUEUE MECHANISM) //done
 ADD RANDOM SONG BY ARTIST 
